gccida/g2/asctoeg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/real.c:5792:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v16 = hex_value[( unsigned __int8)v10]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/real.c:5793:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v17 = hex_value[( unsigned __int8)v10]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/real.c:5802:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v20 = sch_istable[v18]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/real.c:6095:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)v25] & 4) != 0 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asctoeg/src/obj/real.o] Error 1
